[gd_scene load_steps=29 format=2]

[ext_resource path="res://Pics/Minigames/Bollplank/bollplank.png" type="Texture" id=1]
[ext_resource path="res://Pics/Minigames/Bollplank/indikator_bollplank.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Minigames/Bollplank.gd" type="Script" id=3]
[ext_resource path="res://Pics/Mapbuilding/berg/sten.png" type="Texture" id=4]
[ext_resource path="res://inaktuella/Area_1.gd" type="Script" id=5]
[ext_resource path="res://Pics/Minigames/Bollplank/ball.png" type="Texture" id=6]
[ext_resource path="res://Pics/Minigames/Bollplank/sight.png" type="Texture" id=7]
[ext_resource path="res://Pics/Mapbuilding/berg/sten_stor.png" type="Texture" id=8]
[ext_resource path="res://Pics/Mapbuilding/berg/sten2.png" type="Texture" id=9]
[ext_resource path="res://Scenes/UI/Minigames/Loose_screen.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/Minigames/Ready_screen.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/UI/Minigames/Winscreen.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=2]
radius = 74.3303

[sub_resource type="CircleShape2D" id=3]
radius = 51.1566

[sub_resource type="CircleShape2D" id=4]
radius = 34.0147

[sub_resource type="CircleShape2D" id=5]
radius = 50.0

[sub_resource type="CircleShape2D" id=6]
radius = 34.7131

[sub_resource type="Animation" id=9]
resource_name = "Area_1"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Area_1/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 79.0, -89.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Area_2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Area_2/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 58.0, -54.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Area_3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Area_3/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 37.0, -37.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Area_4"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Area_4/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 56.0, -56.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Area_5"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Area_5/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 34.0, -38.0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Area_6"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Area_6/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 36.0, -39.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Area_1/ColorRect:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 79.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area_2/ColorRect:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 58.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area_3/ColorRect:margin_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 37.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area_4/ColorRect:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 56.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area_5/ColorRect:margin_top")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 34.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Area_6/ColorRect:margin_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 36.0 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 3, 2.5 )

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -288, -219, 0, 0, 0, 0, 294, -219, 0, 0, 0, 0, -288, -219 )
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8.5 )

[sub_resource type="Curve2D" id=8]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -325, -185, 0, 0, 0, 0, -325, 191, 0, 0, 0, 0, -325, -185, 0, 0, 0, 0, -325, -185, 0, 0, 0, 0, -325, -186 )
}

[node name="Bollplank" type="Node2D"]
position = Vector2( 488, 298 )
script = ExtResource( 3 )

[node name="Klippv√§gg" type="ColorRect" parent="."]
margin_left = -578.0
margin_top = -326.0
margin_right = 603.0
margin_bottom = 326.0
color = Color( 0.239216, 0.266667, 0.337255, 1 )

[node name="Golv" type="ColorRect" parent="."]
margin_left = -578.0
margin_top = 93.0
margin_right = 602.0
margin_bottom = 367.0
color = Color( 0.114487, 0.217971, 0.238281, 1 )

[node name="Stenar" type="Node2D" parent="."]

[node name="Sten" type="Sprite" parent="Stenar"]
position = Vector2( 502, -150 )
rotation = -3.21811
texture = ExtResource( 4 )

[node name="StenStor" type="Sprite" parent="Stenar"]
modulate = Color( 0.796509, 0.863925, 0.878906, 1 )
position = Vector2( -410, -272 )
rotation = 0.523598
texture = ExtResource( 8 )

[node name="Sten2" type="Sprite" parent="Stenar"]
modulate = Color( 0.780792, 0.902616, 0.929688, 1 )
position = Vector2( -998, 59 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )
offset = Vector2( -1520.4, -89.2032 )

[node name="Sten3" type="Sprite" parent="Stenar"]
position = Vector2( 434, 147 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 9 )

[node name="Sten4" type="Sprite" parent="Stenar"]
position = Vector2( -364, 165 )
rotation = 8.74228e-08
texture = ExtResource( 9 )

[node name="Sten5" type="Sprite" parent="Stenar"]
modulate = Color( 0.780792, 0.902616, 0.929688, 1 )
position = Vector2( 127, -210 )
rotation = -3.95367
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )

[node name="Sten6" type="Sprite" parent="Stenar"]
modulate = Color( 0.780792, 0.902616, 0.929688, 1 )
position = Vector2( -155, -233 )
rotation = -2.61799
scale = Vector2( -1, -1 )
texture = ExtResource( 4 )

[node name="Areor_holes" type="Node2D" parent="."]

[node name="Area_1" type="Area2D" parent="Areor_holes"]
position = Vector2( -160, -72 )
script = ExtResource( 5 )

[node name="Shape" type="CollisionShape2D" parent="Areor_holes/Area_1"]
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Areor_holes/Area_1"]
margin_left = -93.0
margin_top = 79.0
margin_right = 91.0
margin_bottom = 95.0
color = Color( 0.427451, 0.168627, 0.0588235, 1 )

[node name="Area_2" type="Area2D" parent="Areor_holes"]
position = Vector2( -215, 124 )

[node name="Shape" type="CollisionShape2D" parent="Areor_holes/Area_2"]
position = Vector2( 3, 3 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Areor_holes/Area_2"]
margin_left = -65.0
margin_top = 58.0
margin_right = 63.0
margin_bottom = 66.0
color = Color( 0.427451, 0.168627, 0.0588235, 1 )

[node name="Area_3" type="Area2D" parent="Areor_holes"]
position = Vector2( -8, 148 )

[node name="Shape" type="CollisionShape2D" parent="Areor_holes/Area_3"]
shape = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="Areor_holes/Area_3"]
margin_left = -43.0
margin_top = 37.0
margin_right = 42.0
margin_bottom = 42.0
color = Color( 0.427451, 0.168627, 0.0588235, 1 )

[node name="Area_4" type="Area2D" parent="Areor_holes"]
position = Vector2( 75, 10 )

[node name="Shape" type="CollisionShape2D" parent="Areor_holes/Area_4"]
position = Vector2( -3, 0 )
shape = SubResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Areor_holes/Area_4"]
margin_left = -60.0
margin_top = 56.0
margin_right = 53.0
margin_bottom = 71.0
color = Color( 0.427451, 0.168627, 0.0588235, 1 )

[node name="Area_5" type="Area2D" parent="Areor_holes"]
position = Vector2( 234, 59 )

[node name="Shape" type="CollisionShape2D" parent="Areor_holes/Area_5"]
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Areor_holes/Area_5"]
margin_left = -41.0
margin_top = 34.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.427451, 0.168627, 0.0588235, 1 )

[node name="Area_6" type="Area2D" parent="Areor_holes"]
position = Vector2( 174, -123 )

[node name="Shape" type="CollisionShape2D" parent="Areor_holes/Area_6"]
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Areor_holes/Area_6"]
margin_left = -42.0
margin_top = 36.0
margin_right = 43.0
margin_bottom = 46.0
color = Color( 0.427451, 0.168627, 0.0588235, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Areor_holes"]
anims/Area_1 = SubResource( 9 )
anims/Area_2 = SubResource( 11 )
anims/Area_3 = SubResource( 12 )
anims/Area_4 = SubResource( 13 )
anims/Area_5 = SubResource( 14 )
anims/Area_6 = SubResource( 15 )
anims/RESET = SubResource( 10 )

[node name="Bollplank" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sten9" type="Sprite" parent="."]
modulate = Color( 0.600372, 0.766378, 0.804688, 1 )
position = Vector2( 275, 303 )
rotation = 3.29342
scale = Vector2( 1, -1 )
texture = ExtResource( 9 )

[node name="Sight" type="StaticBody2D" parent="."]
position = Vector2( -288, -185 )
scale = Vector2( 0.5, 0.5 )

[node name="Sight" type="Sprite" parent="Sight"]
modulate = Color( 0.421582, 0.59375, 0.394287, 1 )
position = Vector2( -8, -8 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 16 )

[node name="IndicatorPath_horizontal" type="Path2D" parent="."]
curve = SubResource( 7 )

[node name="PathFollow2D" type="PathFollow2D" parent="IndicatorPath_horizontal"]
position = Vector2( -288, -219 )
rotate = false

[node name="Indikator1" type="StaticBody2D" parent="IndicatorPath_horizontal/PathFollow2D"]

[node name="IndikatorBollplank" type="Sprite" parent="IndicatorPath_horizontal/PathFollow2D/Indikator1"]
position = Vector2( 164, 205 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IndicatorPath_horizontal/PathFollow2D/Indikator1"]
shape = SubResource( 1 )

[node name="RayCast2D1" type="RayCast2D" parent="IndicatorPath_horizontal/PathFollow2D/Indikator1"]
position = Vector2( 0, -0.5 )
enabled = true
cast_to = Vector2( 0, 420 )
collide_with_areas = true
collide_with_bodies = false

[node name="ColorRect" type="ColorRect" parent="IndicatorPath_horizontal/PathFollow2D/Indikator1/RayCast2D1"]
visible = false
margin_top = 1.0
margin_right = 2.0
margin_bottom = 425.0

[node name="RayCast2D2" type="RayCast2D" parent="IndicatorPath_horizontal/PathFollow2D/Indikator1"]
position = Vector2( 0, 425 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 400 )
collide_with_areas = true
collide_with_bodies = false

[node name="IndicatorPath_vertical" type="Path2D" parent="."]
position = Vector2( 4, 0 )
curve = SubResource( 8 )

[node name="PathFollow2D" type="PathFollow2D" parent="IndicatorPath_vertical"]
position = Vector2( -325, -185 )
rotate = false

[node name="Indikator2" type="StaticBody2D" parent="IndicatorPath_vertical/PathFollow2D"]

[node name="IndikatorBollplank" type="Sprite" parent="IndicatorPath_vertical/PathFollow2D/Indikator2"]
position = Vector2( 203, -164 )
rotation = -1.57079
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="IndicatorPath_vertical/PathFollow2D/Indikator2"]
rotation = -1.57079
shape = SubResource( 1 )

[node name="RayCast2D1" type="RayCast2D" parent="IndicatorPath_vertical/PathFollow2D/Indikator2"]
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 600 )
collide_with_areas = true
collide_with_bodies = false

[node name="ColorRect" type="ColorRect" parent="IndicatorPath_vertical/PathFollow2D/Indikator2/RayCast2D1"]
visible = false
margin_right = 1.0
margin_bottom = 699.0

[node name="RayCast2D2" type="RayCast2D" parent="IndicatorPath_vertical/PathFollow2D/Indikator2"]
position = Vector2( 603, 0 )
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 600 )
collide_with_areas = true
collide_with_bodies = false

[node name="Start_horizontal" type="Position2D" parent="."]
position = Vector2( -288, -219 )

[node name="Start_vertical" type="Position2D" parent="."]
position = Vector2( -321, -185 )

[node name="Ball_pos" type="Position2D" parent="."]
position = Vector2( -12, 257 )

[node name="Game_timer" type="Timer" parent="."]

[node name="Ball" type="Sprite" parent="."]
position = Vector2( -12, 257 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Loose_screen" parent="." instance=ExtResource( 10 )]
margin_left = -488.0
margin_top = -298.0
margin_right = -448.0
margin_bottom = -258.0

[node name="Winscreen" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = -488.0
margin_top = -298.0
margin_right = -488.0
margin_bottom = -298.0

[node name="Ready_screen" parent="." instance=ExtResource( 11 )]
margin_left = -829.0
margin_top = -564.0
margin_right = -829.0
margin_bottom = -564.0
rect_scale = Vector2( 2, 2 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="ready_done" from="Ready_screen" to="." method="_on_Ready_screen_ready_done"]
